more GC, for lions-share